feita validação de propriedades erradas e retorno de erro quando buscando categoria inesistente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/moneyapi
 spring.datasource.username=postgres 
 spring.datasource.password=max123 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
