--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=postgres
 spring.datasource.password=max123 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.date-format=yyyy-MM-dd
